fixed navbar spacing, and hero spacing

--- a/client/TEMPLATES/css/style.css
+++ b/client/TEMPLATES/css/style.css
@@ -24,7 +24,7 @@ h3 {
   background-image: url(../images/SquabbleHub-BG.jpg);
   background-size: cover !important;
   background-position: center !important;
-  height: 50vh;
+  height: 40% !important;
 }
 
 
